--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
+    "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-numeric-input": "^1.8.3",
     "react-native-reanimated": "^1.7.1",
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
     "react-native-swiper": "^1.6.0",
     "react-native-unimodules": "~0.9.0",
-    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
