--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/stack": "^5.2.19",
     "expo": "~37.0.3",
     "expo-updates": "~0.1.0",
+    "material-design-icons": "^3.0.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
@@ -25,6 +26,7 @@
     "react-native-screens": "^2.2.0",
     "react-native-swiper": "^1.6.0",
     "react-native-unimodules": "~0.9.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
