--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -183,6 +183,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-filesystem')
     implementation project(':react-native-camera')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
