--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@react-navigation/stack": "^5.2.19",
     "expo": "~37.0.3",
     "expo-updates": "~0.1.0",
+    "express": "^4.17.1",
     "material-design-icons": "^3.0.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
     "react-native-camera": "^3.24.2",
     "react-native-elements": "^2.0.0",
+    "react-native-filesystem": "^0.1.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-numeric-input": "^1.8.3",
     "react-native-reanimated": "^1.7.1",
